Fix for RT-25049: SplitMenuButton have gap
As near as I can tell, they have a gap going back a long way. In fact, the gap is still there with Region caching disabled (in fact with region caching turned on, you don't get this gap at all, so I think this error came from some time in the past). The MenuButtonSkinBase layout was incorrect, along with the CSS.

--- a/javafx-ui-controls/src/com/sun/javafx/scene/control/skin/caspian/caspian.css
+++ b/javafx-ui-controls/src/com/sun/javafx/scene/control/skin/caspian/caspian.css
@@ -1834,7 +1834,7 @@
 /* The SplitMenuButton skin uses an inner Label part */
 .split-menu-button > .label {
     -fx-background-color:  -fx-outer-border, -fx-inner-border, -fx-body-color;
-    -fx-background-insets: 0, 1, 2;
+    -fx-background-insets: 0, 1 0 1 1, 2 1 2 2;
     -fx-background-radius: 5 0 0 5, 4 0 0 4, 3 0 0 3;
     -fx-padding: 0.166667em 1.5em 0.25em 0.833333em; /* 2 18 3 10 */
 }
@@ -1850,7 +1850,7 @@
     -fx-color: -fx-hover-base;
 }
 
-.split-menu-button > .arrow-button:armed {
+.split-menu-button > .arrow-button:pressed {
     -fx-color: -fx-pressed-base;
 }
 
